[project]
name = "langchain-service-authn"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click>=8.1.8",
    "faiss-cpu>=1.9.0.post1",
    "google>=3.0.0",
    "langchain-community>=0.3.13",
    "langchain-googledrive>=0.3.0",
    "langchain-openai>=0.2.14",
    "langchain>=0.3.13",
    "pangea-sdk>=5.2.1",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.14.1",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",

    "I",   # isort
    "PTH", # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
