[project]
name = "langchain-service-authn"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click>=8.2.1",
    "faiss-cpu>=1.11.0",
    "google>=3.0.0",
    "langchain-community>=0.3.25",
    "langchain-googledrive>=0.3.35",
    "langchain-openai>=0.3.23",
    "langchain>=0.3.25",
    "pangea-sdk>=6.1.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",

    "I",   # isort
    "PTH", # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
